se mas avances en nesting, nesting en media querys y correccion de sintaxis

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
 
 
-        <title>The Green Bar</title>
+    <title>The Green Bar</title>
 
 </head>
 
@@ -103,6 +103,7 @@
                 competencia son la melodía de nuestras vidas. ¡Súmate a Green Bar y comparte la pasión por Aston Martin
                 F1!
         </div>
+
         <div class="imagenDelmain">
             <img src="./img/352119536_1144914303567158_4485285263322083808_n.jpg"
                 alt="Fernando Alonso entrando en los pits en clasificación">
@@ -115,6 +116,11 @@
             <img src="./img/386262754_264166619940662_2609310702596619209_n.jpg"
                 alt="Jornada de entrenamientos en austin texas en un  atardecer ">
         </div>
+        <div class="imagenDelmain4">
+            <img src="./img/348862866_641098644146075_4542889665858252651_n 2.jpg"
+                alt="Jornada de entrenamientos en monaco ">
+        </div>
+
         </p>
         </section>
 
@@ -144,8 +150,8 @@
                     <img src="./img/Fernando_copy.jpeg" class="d-block w-100"
                         alt="Fernando Alonso en prácticas libres 1">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Primera etiqueta de diapositiva</h5>
-                        <p>Algún contenido de marcador de posición representativo para la primera diapositiva.</p>
+                        <h5>Entrenamientos libres</h5>
+
                     </div>
                 </div>
 
@@ -153,8 +159,7 @@
                     <img src="./img/Equipo_copy.jpeg" class="d-block w-100"
                         alt="Equipo de Aston Martin viendo la carrera a través de los monitores">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Segunda etiqueta de diapositiva</h5>
-                        <p>Algún contenido de marcador de posición representativo para la segunda diapositiva.</p>
+                        <h5>La gran batalla en brasil</h5>
                     </div>
                 </div>
 
@@ -162,8 +167,8 @@
                     <img src="./img/Lance_copy.jpeg" class="d-block w-100"
                         alt="Lance y Fernando en la pretemporada del año 2023">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Etiqueta de la tercera diapositiva</h5>
-                        <p>Algún contenido de marcador de posición representativo para la tercera diapositiva.</p>
+                        <h5>Revisando las telemetrías</h5>
+
                     </div>
                 </div>
 
@@ -171,8 +176,8 @@
                     <img src="./img/publico_copy.jpeg" class="d-block w-100"
                         alt="Fanaticada del equipo Aston Martin saludando desde el paddock del premio de Barcelona">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Cuarta etiqueta de diapositiva</h5>
-                        <p>Algún contenido de marcador de posición representativo para la cuarta diapositiva.</p>
+                        <h5>la Green bar presente</h5>
+
                     </div>
                 </div>
 
@@ -180,8 +185,8 @@
                     <img src="./img/monoplaza de fernando alonso previo a la salida.jpeg" class="d-block w-100"
                         alt="Fernando Alonso en su monoplaza previo a la salida">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Etiqueta de la quinta diapositiva</h5>
-                        <p>Algún contenido de marcador de posición representativo para la quinta diapositiva.</p>
+                        <h5>Preparando la salida</h5>
+
                     </div>
                 </div>
             </div>
@@ -234,8 +239,8 @@
                             src="./img/facebook.png" a href="www.facebook.com" target="_blank">
                 </li>
                 <li>
-                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="./img/gorjeo.png"
-                            a href="www.x.com" target="_blank">
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="./img/gorjeo.png" a
+                            href="www.x.com" target="_blank">
                 </li>
 
                 <div class="direccion">
