--- a/pages/blog.html
+++ b/pages/blog.html
@@ -65,7 +65,7 @@
 
 
         <div class="articulosDeblog">
-            <div class="box">
+            <div class="boxblog">
                 <article class="tarjeta">
 
 
@@ -83,7 +83,7 @@
             </div>
 
 
-            <div class="box">
+            <div class="boxblog">
                 <article class="tarjeta">
 
                     <h3>Entrada 2 del blog</h3>
@@ -101,7 +101,7 @@
 
 
 
-            <div class="box">
+            <div class="boxblog">
 
                 <article class="tarjeta">
                     <h3>Entrada 3 del blog</h3>
