--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -61,107 +61,111 @@
         <div class="encabezadosDeseccion">
             <h2>GreenBar Noticias</h2>
         </div>
-        <div class="box">
+        <div class="noticias">
+            <div class="box">
 
-            <article class="tarjeta">
-                <h3>Noticia1</h3>
-
-
-
-                <img src="../img/348862866_641098644146075_4542889665858252651_n.jpg" alt="Jornada de entrenamientos 1">
-
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                </p>
-            </article>
-        </div>
-        <div class="box">
-
-            <article class="tarjeta">
-                <h3>Noticia2</h3>
-
-
-                <img src="../img/387654485_1545287549551506_8151854803705731939_n.jpg"
-                    alt="Jornada de entrenamientos 2">
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                </p>
-            </article>
-        </div>
-        <div class="box">
-
-            <article class="tarjeta">
-                <h3>Noticia3</h3>
-
-
-                <img src="../img/386262754_264166619940662_2609310702596619209_n.jpg"
-                    alt="Clasificación buenos resultados">
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                </p>
-            </article>
-        </div>
-        <div class="box">
-
-            <article class="tarjeta">
-                <h3>Noticia4</h3>
+                <article class="tarjeta">
+                    <h3>Noticia1</h3>
 
 
 
-                <img src="../img/348862866_641098644146075_4542889665858252651_n.jpg" alt="Jornada de entrenamientos 1">
+                    <img src="../img/348862866_641098644146075_4542889665858252651_n.jpg"
+                        alt="Jornada de entrenamientos 1">
 
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                </p>
-            </article>
-        </div>
-        <div class="box">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                    </p>
+                </article>
+            </div>
+            <div class="box">
 
-            <article class="tarjeta">
-                <h3>Noticia5</h3>
-
-
-                <img src="../img/387654485_1545287549551506_8151854803705731939_n.jpg"
-                    alt="Jornada de entrenamientos 2">
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                </p>
-            </article>
-        </div>
-        <div class="box">
-
-            <article class="tarjeta">
-                <h3>Noticia6</h3>
+                <article class="tarjeta">
+                    <h3>Noticia2</h3>
 
 
-                <img src="../img/386262754_264166619940662_2609310702596619209_n.jpg"
-                    alt="Clasificación buenos resultados">
+                    <img src="../img/387654485_1545287549551506_8151854803705731939_n.jpg"
+                        alt="Jornada de entrenamientos 2">
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                </p>
-            </article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                    </p>
+                </article>
+            </div>
+            <div class="box">
+
+                <article class="tarjeta">
+                    <h3>Noticia3</h3>
+
+
+                    <img src="../img/386262754_264166619940662_2609310702596619209_n.jpg"
+                        alt="Clasificación buenos resultados">
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                    </p>
+                </article>
+            </div>
+            <div class="box">
+
+                <article class="tarjeta">
+                    <h3>Noticia4</h3>
+
+
+
+                    <img src="../img/348862866_641098644146075_4542889665858252651_n.jpg"
+                        alt="Jornada de entrenamientos 1">
+
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                    </p>
+                </article>
+            </div>
+            <div class="box">
+
+                <article class="tarjeta">
+                    <h3>Noticia5</h3>
+
+
+                    <img src="../img/387654485_1545287549551506_8151854803705731939_n.jpg"
+                        alt="Jornada de entrenamientos 2">
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                    </p>
+                </article>
+            </div>
+            <div class="box">
+
+                <article class="tarjeta">
+                    <h3>Noticia6</h3>
+
+
+                    <img src="../img/386262754_264166619940662_2609310702596619209_n.jpg"
+                        alt="Clasificación buenos resultados">
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                    </p>
+                </article>
+            </div>
         </div>
         <div class="linkReferencial">
             <div class=" enlaceReferencial1">
@@ -182,7 +186,7 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="#">Noticias</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
-                
+
             </ul>
         </div>
         <div class="listaPie1">
@@ -204,7 +208,7 @@
                     <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
                 </li>
         </div>
-       
+
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
