se hicieron mas ajustes de sintaxis se comenzo a aplicar extend y mixing

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -64,7 +64,7 @@
         <div class="noticias">
             <div class="box">
 
-                <article class="tarjeta">
+                <article class="tarjetaNoticia1">
                     <h3>Noticia1</h3>
 
 
@@ -82,7 +82,7 @@
             </div>
             <div class="box">
 
-                <article class="tarjeta">
+                <article class="tarjetaNoticia2">
                     <h3>Noticia2</h3>
 
 
@@ -99,7 +99,7 @@
             </div>
             <div class="box">
 
-                <article class="tarjeta">
+                <article class="tarjetaNoticia3">
                     <h3>Noticia3</h3>
 
 
@@ -116,7 +116,7 @@
             </div>
             <div class="box">
 
-                <article class="tarjeta">
+                <article class="tarjetaNoticia4">
                     <h3>Noticia4</h3>
 
 
@@ -134,7 +134,7 @@
             </div>
             <div class="box">
 
-                <article class="tarjeta">
+                <article class="tarjetaNoticia5">
                     <h3>Noticia5</h3>
 
 
@@ -151,7 +151,7 @@
             </div>
             <div class="box">
 
-                <article class="tarjeta">
+                <article class="tarjetaNoticia6">
                     <h3>Noticia6</h3>
 
 
