se añadieron elementos de mixing y extend al codigo

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -65,104 +65,91 @@
             <div class="box">
 
                 <article class="tarjetaNoticia1">
-                    <h3>Noticia1</h3>
+                    <h5>Alonso: Aston Martin se enfrenta a un "periodo complicado" en su próximo paso en la F1
+                    </h5>
 
 
 
-                    <img src="../img/348862866_641098644146075_4542889665858252651_n.jpg"
-                        alt="Jornada de entrenamientos 1">
+                    <img src="../img/6.png" alt="Jornada de entrenamientos 1">
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                    <p>Fernando Alonso cree que su equipo Aston Martin de Fórmula 1 se enfrenta a un "periodo
+                        complicado" en su intento de dar el siguiente paso para convertirse en un aspirante regular a
+                        las victorias en carrera.
                     </p>
                 </article>
             </div>
             <div class="box">
 
                 <article class="tarjetaNoticia2">
-                    <h3>Noticia2</h3>
+                    <h5>Stroll explica por qué sufrió durante la F1 2023 con Aston Martin</h5>
 
 
-                    <img src="../img/387654485_1545287549551506_8151854803705731939_n.jpg"
-                        alt="Jornada de entrenamientos 2">
+                    <img src="../img/5.png" alt="Jornada de entrenamientos 2">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                    <p>
+                        Lance Stroll dice que no podía permitirse dudar de sí mismo a pesar de una difícil temporada
+                        2023
+                        en la que fue superado regularmente por su compañero de equipo en el Aston Martin de Fórmula 1,
+                        Fernando Alonso.
                     </p>
                 </article>
             </div>
             <div class="box">
 
                 <article class="tarjetaNoticia3">
-                    <h3>Noticia3</h3>
+                    <h5>Mercedes y Aston Martin, por puertas separadas en el túnel de viento</h5>
 
 
-                    <img src="../img/386262754_264166619940662_2609310702596619209_n.jpg"
-                        alt="Clasificación buenos resultados">
+                    <img src="../img/1.png" alt="Clasificación buenos resultados">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                    <p>
+                        Mercedes hizo que la escudería Aston Martin de Fórmula 1 utilizara puertas distintas para
+                        acceder a su túnel de viento con el fin de garantizar la más absoluta confidencialidad mientras
+                        utilizaban las mismas instalaciones.
                     </p>
                 </article>
             </div>
             <div class="box">
 
                 <article class="tarjetaNoticia4">
-                    <h3>Noticia4</h3>
+                    <h5>Aston Martin: convergencia de F1 podría llevar a un 2024 "fantástico"</h5>
 
 
 
-                    <img src="../img/348862866_641098644146075_4542889665858252651_n.jpg"
-                        alt="Jornada de entrenamientos 1">
+                    <img src="../img/2.png" alt="Jornada de entrenamientos 1">
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, temporibus
+                    <p>El director de rendimiento de Aston Martin en la Fórmula 1, Tom McCullough, cree que la temporada
+                        2024 podría ser "fantástica para el deporte" a medida que la parrilla se converja.
                     </p>
                 </article>
             </div>
             <div class="box">
 
                 <article class="tarjetaNoticia5">
-                    <h3>Noticia5</h3>
+                    <h5>Aston apunta a copiar el DRS de Red Bull y explica las dificultades</h5>
 
 
-                    <img src="../img/387654485_1545287549551506_8151854803705731939_n.jpg"
-                        alt="Jornada de entrenamientos 2">
+                    <img src="../img/3.png" alt="Jornada de entrenamientos 2">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, optio
+                    <p>
+
+                        Alonso cambió a Aston Martin en 2023, logrando ocho podios. Aunque Verstappen dominó, Alonso se
+                        destacó en Mónaco y lamentó decisiones estratégicas. Cree que merecía victorias, especialmente
+                        en Zandvoort.
                     </p>
                 </article>
             </div>
             <div class="box">
 
                 <article class="tarjetaNoticia6">
-                    <h3>Noticia6</h3>
+                    <h5>Alonso: Aston Martin F1 merecía una victoria este año más que nadie</h5>
 
 
-                    <img src="../img/386262754_264166619940662_2609310702596619209_n.jpg"
-                        alt="Clasificación buenos resultados">
+                    <img src="../img/4.png" alt="Clasificación buenos resultados">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
+                    <p>Fernando Alonso dice que el creciente calendario de la Fórmula 1 y la inclusión de tripletes de
+                        competencia le empujarán más cerca de dejar la serie antes de que tenga dudas sobre su capacidad
+                        de pilotaje.
                     </p>
                 </article>
             </div>
