--- a/pages/blog.html
+++ b/pages/blog.html
@@ -69,15 +69,12 @@
                 <article class="tarjeta">
 
 
-                    <h3>Entrada 1 del blog</h3>
-                    <img src="../img/339680742_876210170133876_4104793023013670619_n.jpg"
+                    <h5>Alonso: "2023 fue mi mejor año en F1 junto con 2012"</h5>
+                    <img src="../img/7.webp"
                         alt="aston martin entrando a pit">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, laudantium!
-                        orem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!</p>
+                    <p>Fernando Alonso cree que su temporada 2023 con Aston Martin fue su mejor año en la Fórmula 1,
+                        junto con la de 2012 en Ferrari, cuando perdió el campeonato en el final con Sebastian Vettel,
+                        de Red Bull.</p>
 
                 </article>
             </div>
@@ -86,15 +83,12 @@
             <div class="boxblog">
                 <article class="tarjeta">
 
-                    <h3>Entrada 2 del blog</h3>
-                    <img src="../img/339680742_876210170133876_4104793023013670619_n.jpg"
+                    <h5>Aston Martin F1 niega una posible salida de Lawrence Stroll</h5>
+                    <img src="../img/8.png"
                         alt="aston martin ganando posicion">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nobis
-                        orem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!.</p>
+                    <p>El director general del equipo Aston Martin de Fórmula 1, Jeff Slack, afirma que la nueva
+                        inversión externa anunciada la semana pasada no supone el inicio de una eventual salida del
+                        principal accionista, Lawrence Stroll.</p>
 
                 </article>
             </div>
@@ -104,15 +98,14 @@
             <div class="boxblog">
 
                 <article class="tarjeta">
-                    <h3>Entrada 3 del blog</h3>
-                    <img src="../img/339680742_876210170133876_4104793023013670619_n.jpg"
+                    <h5>Aston Martin F1 vende una parte con una valuación de más de mil millones</h5>
+                    <img src="../img/10.jpeg"
                         alt="aston martin perfecta estrategia mojado">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, facere?
-                        orem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptatum!</p>
+                    <p>La escudería Aston Martin de Fórmula 1 ha vendido una participación de su compañía a la empresa
+                        de capital riesgo Arctos Partners.
+                        Aunque no se han revelado las cifras exactas, Aston Martin Racing ha informado en la previa del
+                        Gran Premio inaugural de Las Vegas que Arctos Partners ha adquirido una "participación
+                        minoritaria en AMR Holdings GP Limited.</p>
                 </article>
             </div>
 
