--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Para colocar el fav icon se utiliza la siguiente etiqueta de codidgo, la cual seria-->
+    <meta name="description"
+    content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
+    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -14,7 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,400&display=swap"
         rel="stylesheet">
-    <title>The Green Bar</title>
+    <title>The Green Bar | Blog</title>
 </head>
 
 <body>
@@ -70,7 +73,7 @@
 
 
                     <h5>Alonso: "2023 fue mi mejor año en F1 junto con 2012"</h5>
-                    <img src="../img/7.webp"
+                    <img src="../img/4.png"
                         alt="aston martin entrando a pit">
                     <p>Fernando Alonso cree que su temporada 2023 con Aston Martin fue su mejor año en la Fórmula 1,
                         junto con la de 2012 en Ferrari, cuando perdió el campeonato en el final con Sebastian Vettel,
@@ -84,7 +87,7 @@
                 <article class="tarjeta">
 
                     <h5>Aston Martin F1 niega una posible salida de Lawrence Stroll</h5>
-                    <img src="../img/8.png"
+                    <img src="../img/5.png"
                         alt="aston martin ganando posicion">
                     <p>El director general del equipo Aston Martin de Fórmula 1, Jeff Slack, afirma que la nueva
                         inversión externa anunciada la semana pasada no supone el inicio de una eventual salida del
@@ -99,7 +102,7 @@
 
                 <article class="tarjeta">
                     <h5>Aston Martin F1 vende una parte con una valuación de más de mil millones</h5>
-                    <img src="../img/10.jpeg"
+                    <img src="../img/6.png"
                         alt="aston martin perfecta estrategia mojado">
                     <p>La escudería Aston Martin de Fórmula 1 ha vendido una participación de su compañía a la empresa
                         de capital riesgo Arctos Partners.
