--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
+    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -13,7 +18,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,400&display=swap"
         rel="stylesheet">
-    <title>The Green Bar</title>
+    <title>The Green Bar | Analisis</title>
 </head>
 
 <body>
@@ -24,7 +29,7 @@
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
             <div class="imagenLogo">
-            
+
                 <img src="../img/formula-1.png" alt="logofanpage" style="width: 100%;">
             </div>
 
@@ -70,7 +75,8 @@
             <h2>Resumen de un gp trepidante</h2>
         </div>
         <div class="ultimoGpdisputado">
-            <img src="../img/Fernando entrando al cocpit.jpeg" alt="Fernando Alonso entrando a su monoplaza previo a la jornada de clasificación">
+            <img src="../img/Fernando entrando al cocpit.jpeg"
+                alt="Fernando Alonso entrando a su monoplaza previo a la jornada de clasificación">
         </div>
         <div class="encabezadosDeseccion">
             <h2><strong>Una temporada increíble</strong></h2>
@@ -106,7 +112,7 @@
                 en pista han dejado una marca indeleble en la historia de la F1. Sin duda, una temporada que los
                 aficionados
                 nunca olvidarán.
-                
+
                 Esta carrera en Abu Dabi ha sido una deslumbrante forma de cerrar la temporada de Fórmula 1, llena de
                 emoción y
                 giros inesperados. La lucha por el campeonato, la estrategia de neumáticos de Alonso y las emocionantes
@@ -137,25 +143,25 @@
             </ul>
         </div>
         <div class="listaPie2">
-        <ul>
-            <li>
-                <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
-                        src="../img/instagram.png" a href="www.instagram.com" target="_blank">
-                </a>
-            <li>
-                <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                        src="../img/facebook.png" a href="www.facebook.com" target="_blank">
-            </li>
-            <li>
-                <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
-                        href="www.x.com" target="_blank">
-            </li>
-            <li>
-                <h4>Dirección</h4>
-                <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
-            </li>
-        </ul>
-    </div>
+            <ul>
+                <li>
+                    <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
+                            src="../img/instagram.png" a href="www.instagram.com" target="_blank">
+                    </a>
+                <li>
+                    <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
+                            src="../img/facebook.png" a href="www.facebook.com" target="_blank">
+                </li>
+                <li>
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
+                            href="www.x.com" target="_blank">
+                </li>
+                <li>
+                    <h4>Dirección</h4>
+                    <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                </li>
+            </ul>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
