--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
+    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -13,7 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,400&display=swap"
         rel="stylesheet">
-    <title>The Green Bar</title>
+    <title>The Green Bar | Noticias </title>
 </head>
 
 <body>
