se actualizan media querys y elementos en el index

--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
     <main>
         <div class="encabezadosDeseccion">
             <h1>¿Quienes Somos?</h1>
+            <div class="ultimoGpdisputado">
+                <img src="./img/astonmartinhorizontal1webp.png"
+                    alt="Fernando Alonso batallando por posicion en carrera sprint de brazil en vuelta 14">
+            </div>
         </div>
-        <div class="ultimoGpdisputado">
-            <img src="./img/astonmartinhorizontal1.png"
-                alt="Fernando Alonso batallando por posicion en carrera sprint de brazil en vuelta 14">
-        </div>
+        
         <div class="encabezadosDeseccion">
             <h2><strong>Green Bar</strong></h2>
         </div>
@@ -81,29 +82,31 @@
                 solo
                 la
                 F1 puede ofrecer.
-                <br>
+            </p>
+            <p>
                 En Green Bar, estamos unidos por nuestra devoción a dos talentosos pilotos: Fernando Alonso y Lance
                 Stroll.
                 Acompañamos a nuestro equipo en cada carrera, siguiendo a Aston Martin F1 por los circuitos más
                 emblemáticos
-                del
-                mundo. Desde las emocionantes calles de Mónaco hasta los rápidos trazados de Monza, estamos ahí para
+                del mundo. Desde las emocionantes calles de Mónaco hasta los rápidos trazados de Monza, estamos ahí para
                 alentar
-                y
-                apoyar a nuestros héroes en cada curva y recta.
-                <br>
+                y apoyar a nuestros héroes en cada curva y recta.
+            </p>
+                <p>
                 Nuestra pasión por Aston Martin F1 es inquebrantable, y compartimos ese amor por el automovilismo en
                 cada
                 viaje
                 juntos. Únete a nosotros en esta emocionante aventura, donde el rugir de los motores y la emoción de la
                 competencia son la melodía de nuestras vidas. ¡Súmate a Green Bar y comparte la pasión por Aston Martin
                 F1!
-                <br>
+            </p>
+            <p>
                 Nuestra pasión por Aston Martin F1 es inquebrantable, y compartimos ese amor por el automovilismo en
                 cada viaje juntos. Únete a nosotros en esta emocionante aventura, donde el rugir de los motores y la
                 emoción de la
                 competencia son la melodía de nuestras vidas. ¡Súmate a Green Bar y comparte la pasión por Aston Martin
                 F1!
+            </p>
         </div>
 
         <div class="imagenDelmain">
