se modifica gp de abudhabi, blog, en los html y en su respectiva hoja de estilo. se usan extend para algunos elementos que repiten caracteristicas. se pudo observar un error el cual no dejaba seguir compilando, no habia sudecido antes

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-    content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
+        content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
     <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
         F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
@@ -73,11 +73,13 @@
 
 
                     <h5>Alonso: "2023 fue mi mejor año en F1 junto con 2012"</h5>
-                    <img src="../img/4.png"
-                        alt="aston martin entrando a pit">
-                    <p>Fernando Alonso cree que su temporada 2023 con Aston Martin fue su mejor año en la Fórmula 1,
-                        junto con la de 2012 en Ferrari, cuando perdió el campeonato en el final con Sebastian Vettel,
-                        de Red Bull.</p>
+                    <img src="../img/4.png" alt="aston martin entrando a pit">
+                    <div class="parrafoBlog1">
+                        <p>Fernando Alonso cree que su temporada 2023 con Aston Martin fue su mejor año en la Fórmula 1,
+                            junto con la de 2012 en Ferrari, cuando perdió el campeonato en el final con Sebastian
+                            Vettel,
+                            de Red Bull.</p>
+                    </div>
 
                 </article>
             </div>
@@ -87,11 +89,12 @@
                 <article class="tarjeta">
 
                     <h5>Aston Martin F1 niega una posible salida de Lawrence Stroll</h5>
-                    <img src="../img/5.png"
-                        alt="aston martin ganando posicion">
-                    <p>El director general del equipo Aston Martin de Fórmula 1, Jeff Slack, afirma que la nueva
-                        inversión externa anunciada la semana pasada no supone el inicio de una eventual salida del
-                        principal accionista, Lawrence Stroll.</p>
+                    <img src="../img/5.png" alt="aston martin ganando posicion">
+                    <div class="parrafoBlog2">
+                        <p>El director general del equipo Aston Martin de Fórmula 1, Jeff Slack, afirma que la nueva
+                            inversión externa anunciada la semana pasada no supone el inicio de una eventual salida del
+                            principal accionista, Lawrence Stroll.</p>
+                    </div>
 
                 </article>
             </div>
@@ -102,13 +105,16 @@
 
                 <article class="tarjeta">
                     <h5>Aston Martin F1 vende una parte con una valuación de más de mil millones</h5>
-                    <img src="../img/6.png"
-                        alt="aston martin perfecta estrategia mojado">
-                    <p>La escudería Aston Martin de Fórmula 1 ha vendido una participación de su compañía a la empresa
-                        de capital riesgo Arctos Partners.
-                        Aunque no se han revelado las cifras exactas, Aston Martin Racing ha informado en la previa del
-                        Gran Premio inaugural de Las Vegas que Arctos Partners ha adquirido una "participación
-                        minoritaria en AMR Holdings GP Limited.</p>
+                    <img src="../img/6.png" alt="aston martin perfecta estrategia mojado">
+                    <div class="parrafoBlog3">
+                        <p>La escudería Aston Martin de Fórmula 1 ha vendido una participación de su compañía a la
+                            empresa
+                            de capital riesgo Arctos Partners.
+                            Aunque no se han revelado las cifras exactas, Aston Martin Racing ha informado en la previa
+                            del
+                            Gran Premio inaugural de Las Vegas que Arctos Partners ha adquirido una "participación
+                            minoritaria en AMR Holdings GP Limited.</p>
+                    </div>
                 </article>
             </div>
 
