--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -85,7 +85,10 @@
             <img src="../img/previo-a-la-salida.png" alt="aston martin entrando en los pits en clasificación">
         </div>
         <div class="imagenDelgp2">
-            <img src="../img/previo-a-la-salida-2.png" alt="aston martin entrando en los pits en clasificación">
+            <img src="../img/previo-a-la-salida-2.png" alt="aston martin saliendo en los pits en clasificación">
+        </div>
+        <div class="imagenDelgp3">
+            <img src="../img/10.jpeg" alt="Lance y Fernando en el final del circuito junto al equipo">
         </div>
         <div class="textosDelgp">
             <p>La temporada de Fórmula 1 llegó a su emocionante conclusión en el Circuito de Yas Marina, en Abu Dabi. La
