se actualizan los htmls y elementos en el codigo scss

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -65,8 +65,13 @@
         <div class="encabezadosDeseccion">
             <h2>GreenBar Blog</h2>
         </div>
-
-
+        <div class="portadaDeblog">
+            <img src="../img/Fernando-entregando-la-botella-post-podio.jpeg"
+                alt="fernando alonso celebra con su equipo en el podio del gran premio de brazil">
+        </div>
+        <div class="encabezadosDeseccion">
+            <h2><strong>Entradas de blog</strong></h2>
+        </div>
         <div class="articulosDeblog">
             <div class="boxblog">
                 <article class="tarjeta">
