--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -65,6 +65,13 @@
         <div class="encabezadosDeseccion">
             <h2>GreenBar Noticias</h2>
         </div>
+        <div class="portadaDenoticias">
+            <img src="../img/9.jpeg"
+                alt="Equipo de fans que se encontraron en silverstone para recibir un tour por toda la fabrica">
+        </div>
+        <div class="encabezadosDeseccion">
+            <h2><strong>Actualizaciones del equipo</strong></h2>
+        </div>
         <div class="noticias">
             <div class="box">
 
