se agregaron diversos elementos al html, se pulieron las media querys, las cuales se seguiran trabajando para una mejor experiencia

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
   <meta name="description"
     content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
-    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+  <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
     F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
   <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -105,10 +105,20 @@
 
 
     </section>
-
-
-
-
+    <div class="imagenesParacontacto">
+      <div class="imagenDelnewslatter1">
+        <img src="../img/jesshawkins.jpg" alt="jessica Hawkins en los test de bahrein">
+      </div>
+      <div class="imagenDelnewslatter2">
+        <img src="../img/FernandoAlonso.jpg" alt="Fernando alonso revisando las telemetrias">
+      </div>
+      <div class="imagenDelnewslatter3">
+        <img src="../img/LanceStroll.jpg" alt="Lance stroll en la drivers parade">
+      </div>
+      <div class="imagenDelnewslatter4">
+        <img src="../img/previo-a-la-salida-3.png" alt="vuelta de calentamiento en el circuito de belgica">
+      </div>
+    </div>
     </Section>
     <div class="linkReferencial">
       <div class=" enlaceReferencial1">
