--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -117,8 +117,8 @@
                 emocionante duelo por la cuarta posición, que finalmente se decantó a favor de Ricciardo en las últimas
                 vueltas.
             </p>
-           
-            
+
+
 
         </div>
 
@@ -135,169 +135,187 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">1</th>
+                        <th scope="row">01:26:07.136</th>
+                        <td>Max Verstappen</td>
                         <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <td>Redbull</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">2</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a 00:08.277</th>
+                        <td>Sergio Pérez</td>
+                        <td>2</td>
+                        <td>Redbull</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">3</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
 
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <div class="fernando">
+                            <strong>
+                                <th scope="row">a 00:34.155</th>
+                                <td>Fernando Alonso</td>
+                                <td>3</td>
+                                <td>Aston Martin</td>
+                            </strong>
+                        </div>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">5</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a 00:34.208</th>
+                        <td>Lewis Hamilton</td>
+                        <td>4</td>
+                        <td>Mercedes Benz</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">6</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a 00:40.845</th>
+                        <td>Lando Norris</td>
+                        <td>5</td>
+                        <td>Mclaren</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">7</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a 00:50.188</th>
+                        <td>Carlos Sainz</td>
+                        <td>6</td>
+                        <td>Ferrari</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">8</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a 00:56.093</th>
+                        <td>Charles Leclerc</td>
+                        <td>7</td>
+                        <td>Ferrari</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">9</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a 01:02.859</th>
+                        <td>George Russell</td>
+                        <td>8</td>
+                        <td>Mercedes Benz</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">10</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a 01:09.880</th>
+                        <td>Oscar Piastri</td>
+                        <td>9</td>
+                        <td>Mclaren</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">11</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <div class="lance">
+                            <strong>
+                                <th scope="row">a +1 vuelta</th>
+                                <td>Lance Stroll</td>
+                                <td>10</td>
+                                <td>Aston Martin</td>
+                            </strong>
+                        </div>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">12</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +1 vuelta</th>
+                        <td>Pierre Gasly</td>
+                        <td>11</td>
+                        <td>Alpine</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">13</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +1 vuelta</th>
+                        <td>Esteban Ocon</td>
+                        <td>12</td>
+                        <td>Alpine</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">14</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +1 vuelta</th>
+                        <td>Alex Albon</td>
+                        <td>13</td>
+                        <td>Williams</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">15</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +2 vueltas</th>
+                        <td>Yuki Tsunoda</td>
+                        <td>14</td>
+                        <td>Alpha Tauri</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">16</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +14 vueltas</th>
+                        <td>Valtteri Bottas</td>
+                        <td>15</td>
+                        <td>Alfa Romeo Sauber</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">17</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +32 vueltas</th>
+                        <td>Nico Hülkenberg</td>
+                        <td>16</td>
+                        <td>Hass</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">18</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +49 vueltas</th>
+                        <td>Daniel Ricciardo</td>
+                        <td>17</td>
+                        <td>Alpha Tauri</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">19</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +71 vueltas</th>
+                        <td>Zhou Guanyu</td>
+                        <td>18</td>
+                        <td>Alfa Romeo Sauber</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">20</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +71 vueltas</th>
+                        <td>Kevin Magnussen</td>
+                        <td>19</td>
+                        <td>Hass</td>
 
 
                     </tr>
                     <tr>
-                        <th scope="row">21</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <th scope="row">a +71 vueltas</th>
+                        <td>Liam Lawson</td>
+                        <td>20</td>
+                        <td>Alpha Tauri</td>
+
+
+                    </tr>
+                    <tr>
+                        <th scope="row">a +72 vueltas</th>
+                        <td>Logan Sargeant </td>
+                        <td>21</td>
+                        <td>Williams</td>
+
+
+                    </tr>
+                    <tr>
+                        <th scope="row">a +80 vueltas</th>
+                        <td>Nyck DeVries</td>
+                        <td>21</td>
+                        <td>Alpha Tauri</td>
 
 
                     </tr>
