se pulen los elementos en los grids para una mejor visualizacion, se cambia nomenclatura de algunos elementos

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -73,7 +73,7 @@
             <h2><strong>Entradas de blog</strong></h2>
         </div>
         <div class="articulosDeblog">
-            <div class="boxblog">
+            <div class="boxblog1">
                 <article class="tarjeta">
 
 
@@ -90,7 +90,7 @@
             </div>
 
 
-            <div class="boxblog">
+            <div class="boxblog2">
                 <article class="tarjeta">
 
                     <h5>Aston Martin F1 niega una posible salida de Lawrence Stroll</h5>
@@ -106,7 +106,7 @@
 
 
 
-            <div class="boxblog">
+            <div class="boxblog3">
 
                 <article class="tarjeta">
                     <h5>Aston Martin F1 vende una parte con una valuación de más de mil millones</h5>
