se ajustan elementos en los html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
+    <meta name="Home Green Bar el mejor contenido para el fan de Aston Martin f1 team"
+        content="width=device-width, initial-scale=1.0">
+    <meta name="Home Green Bar el mejor contenido para el fan de Aston Martin f1 team"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
 
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
@@ -71,7 +72,7 @@
                     alt="Fernando Alonso batallando por posicion en carrera sprint de brazil en vuelta 14">
             </div>
         </div>
-        
+
         <div class="encabezadosDeseccion">
             <h2><strong>Green Bar</strong></h2>
         </div>
@@ -92,7 +93,7 @@
                 alentar
                 y apoyar a nuestros héroes en cada curva y recta.
             </p>
-                <p>
+            <p>
                 Nuestra pasión por Aston Martin F1 es inquebrantable, y compartimos ese amor por el automovilismo en
                 cada
                 viaje
@@ -256,7 +257,9 @@
                 </div>
                 <div class="direccion2">
                     <li>
-                        <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/place/Jard%C3%ADn+Japon%C3%A9s+de+la+Amistad/@-33.4018313,-70.6232737,14z/data=!4m6!3m5!1s0x9662cf5e06c1da63:0x7144a2e69a9985a8!8m2!3d-33.4134532!4d-70.6142963!16s%2Fg%2F11b7clns_k?entry=ttu"
+                            frameborder="0"></iframe>
                     </li>
                 </div>
 
