--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
+    <meta name="Green bar noticias los mejores reportajes y actualidad del equipo"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
     <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
@@ -203,7 +203,9 @@
                 </li>
                 <li>
                     <h4>Dirección</h4>
-                    <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/place/Jard%C3%ADn+Japon%C3%A9s+de+la+Amistad/@-33.4018313,-70.6232737,14z/data=!4m6!3m5!1s0x9662cf5e06c1da63:0x7144a2e69a9985a8!8m2!3d-33.4134532!4d-70.6142963!16s%2Fg%2F11b7clns_k?entry=ttu"
+                        frameborder="0"></iframe>
                 </li>
         </div>
 
