--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
+    <meta name="Green bar Grand prix, resumen de las mejores carreras y sus tiempos"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
     <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
         F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
@@ -87,7 +87,7 @@
         <div class="imagenDelgp2">
             <img src="../img/previo-a-la-salida-2.png" alt="aston martin saliendo en los pits en clasificación">
         </div>
-        
+
         <div class="textosDelgp">
             <p>La temporada de Fórmula 1 llegó a su emocionante conclusión en el Circuito de Yas Marina, en Abu Dabi. La
                 carrera
@@ -356,7 +356,9 @@
                 </li>
                 <li>
                     <h4>Dirección</h4>
-                    <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/place/Jard%C3%ADn+Japon%C3%A9s+de+la+Amistad/@-33.4018313,-70.6232737,14z/data=!4m6!3m5!1s0x9662cf5e06c1da63:0x7144a2e69a9985a8!8m2!3d-33.4134532!4d-70.6142963!16s%2Fg%2F11b7clns_k?entry=ttu"
+                        frameborder="0"></iframe>
                 </li>
             </ul>
         </div>
